@@ -43,6 +43,7 @@ The `register_snippet` function now accepts a `SnippetViewSet` class, allowing v
  * Add a toggle to collapse/expand all page panels at once (Helen Chapman)
  * Improve the GitHub Workflows (CI) security (Alex (sashashura))
  * Use `search` type input in documentation search (LB (Ben) Johnston)
+ * Render `help_text` when set on `FieldPanel`, `MultiFieldPanel`, `FieldRowPanel`, and other panel APIs where it previously worked without official support (Matt Westcott)
 
 ### Bug fixes
 
@@ -55,6 +56,7 @@ The `register_snippet` function now accepts a `SnippetViewSet` class, allowing v
  * Ensure that `ModelAdmin` correctly supports filters in combination with subsequent searches without clearing the applied filters (Stefan Hammer)
  * Add missing translated values to site settings' headers plus models presented in listings and audit report filtering labels (Stefan Hammer)
  * Remove `capitalize()` calls to avoid issues with other languages or incorrectly presented model names for reporting and parts of site settings (Stefan Hammer)
+ * Add back rendering of `help_text` for InlinePanel (Matt Westcott)
 
 ## Upgrade considerations
 
