@@ -1,2 +1,2 @@
 {% load wagtailadmin_tags i18n %}
-{% include "wagtailadmin/shared/field.html" with show_label=False %}
+{% include "wagtailadmin/shared/field.html" with show_label=False help_text=self.help_text %}
