@@ -1,6 +1,9 @@
 {% load wagtailadmin_tags %}
 
 <div class="w-form-width">
+    {% if self.help_text %}
+        {% help_block status="info" %}{{ self.help_text }}{% endhelp_block %}
+    {% endif %}
     {% for child, identifier in self.visible_children_with_identifiers %}
         {% panel id_prefix=self.prefix id=identifier classname=child.classes|join:' ' heading=child.heading heading_size="label" icon=child.icon id_for_label=child.id_for_label is_required=child.is_required %}
             {% component child %}
